# BPFTool-Samples

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
01-UProbe/: CMakeLists.txt
01-UProbe-Print/: CMakeLists.txt  README.md
01-UProbe-Print/bpf/: uprobe-sample-print.bpf.c
01-UProbe-Print/src/: main-print.cpp
01-UProbe/bpf/: uprobe-sample-ringbuff.bpf.c  uprobe-sample.bpf.c
01-UProbe/includes/: common.h
01-UProbe/src/: main-ringbuf.cpp  main-ringbuff.cpp
01-UProbe/test/: test_executable.c  test_module.c
02-UProbe-RingBuff/: CMakeLists.txt  README.md
02-UProbe-RingBuff/bpf/: uprobe-sample-ringbuff.bpf.c
02-UProbe-RingBuff/includes/: common.h
02-UProbe-RingBuff/src/: main-ringbuff.cpp
03-Uprobe-monitor-allocs/: CMakeLists.txt  README.md
03-Uprobe-monitor-allocs/bpf/: uprobe-alloc-monitor.bpf.c
03-Uprobe-monitor-allocs/includes/: common.h
03-Uprobe-monitor-allocs/src/: main-alloc-monitor.cpp
cmake/: android-bpftools.cmake  aosp.cmake  bpftool.cmake  install.cmake  utils.cmake
tests/: CMakeLists.txt  test_alloc.c
